--- a/package.json
+++ b/package.json
@@ -33,19 +33,28 @@
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/passport": "^8.1.0",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/swagger": "^5.1.5",
+        "@nestjs/typeorm": "^8.0.3",
+        "bcryptjs": "^2.4.3",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.13.2",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
+        "mysql2": "^2.3.3",
         "passport": "^0.5.2",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
-        "rxjs": "^7.2.0"
+        "rxjs": "^7.2.0",
+        "swagger-ui-express": "^4.3.0",
+        "typeorm": "^0.2.41"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.13",
         "@types/jest": "27.0.2",
         "@types/morgan": "^1.9.3",
@@ -63,7 +72,7 @@
         "ts-loader": "^9.2.3",
         "ts-node": "^10.0.0",
         "tsconfig-paths": "^3.10.1",
-        "typescript": "^4.3.5"
+        "typescript": "4.5.5"
     },
     "jest": {
         "moduleFileExtensions": [
@@ -77,7 +86,13 @@
             "^.+\\.(t|j)s$": "ts-jest"
         },
         "collectCoverageFrom": [
-            "**/*.(t|j)s"
+            "**/src/**/*.ts",
+            "!**/*.module.ts",
+            "!**/config.ts",
+            "!**/main.ts"
+        ],
+        "modulePathIgnorePatterns": [
+            "dist"
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
