--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "@nestjs/swagger": "^5.1.5",
         "@nestjs/typeorm": "^8.0.3",
         "bcryptjs": "^2.4.3",
+        "cache-manager": "^3.6.0",
+        "cache-manager-redis-store": "^2.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
         "jsonwebtoken": "^8.5.1",
@@ -55,6 +57,8 @@
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
         "@types/bcryptjs": "^2.4.2",
+        "@types/cache-manager": "^3.4.2",
+        "@types/cache-manager-redis-store": "^2.0.1",
         "@types/express": "^4.17.13",
         "@types/jest": "27.0.2",
         "@types/morgan": "^1.9.3",
