Fix tests not running properly
- Managed to still keep parallel run for tests

--- a/package.json
+++ b/package.json
@@ -98,6 +98,9 @@
         "modulePathIgnorePatterns": [
             "dist"
         ],
+        "moduleNameMapper": {
+            "@utils": "<rootDir>/shared/utils"
+        },
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
     }
