--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
     },
     "dependencies": {
+        "@nestjs/axios": "^0.0.5",
         "@nestjs/common": "^8.0.0",
         "@nestjs/core": "^8.0.0",
         "@nestjs/jwt": "^8.0.0",
@@ -99,7 +100,9 @@
             "dist"
         ],
         "moduleNameMapper": {
-            "@utils": "<rootDir>/shared/utils"
+            "@shared/utils": "<rootDir>/shared/utils",
+            "@shared/entities": "<rootDir>/shared/entities",
+            "@shared/errors": "<rootDir>/shared/errors"
         },
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
