--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
         "noFallthroughCasesInSwitch": false,
         "resolveJsonModule": true,
         "paths": {
-            "@utils": [
-                "./shared/utils"
+            "@shared/*": [
+                "shared/*"
             ]
         }
     }
