Implement important functionalities for vm-manager
- Implemented the most important functionalities for the vm-manager
- Wrote appropriate interfaces
- Wrote unit tests where it was possible and made the most sense
- Partial work on the vm-manager controller

--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
             "@shared/entities": "<rootDir>/shared/entities",
             "@shared/errors": "<rootDir>/shared/errors"
         },
-        "coverageDirectory": "../coverage",
+        "coverageDirectory": "coverage",
         "testEnvironment": "node"
     }
 }
