--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "cache-manager-redis-store": "^2.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
+        "dotenv": "^16.0.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.3.3",
