--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "swagger-ui-express": "^4.3.0",
-        "typeorm": "^0.2.41"
+        "template-file": "^6.0.1",
+        "typeorm": "^0.2.41",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
@@ -68,6 +70,7 @@
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.11",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "eslint": "7.14.0",
