--- a/package.json
+++ b/package.json
@@ -104,9 +104,7 @@
             "dist"
         ],
         "moduleNameMapper": {
-            "@shared/utils": "<rootDir>/shared/utils",
-            "@shared/entities": "<rootDir>/shared/entities",
-            "@shared/errors": "<rootDir>/shared/errors"
+            "@shared/(.*)": "<rootDir>/shared/$1"
         },
         "coverageDirectory": "coverage",
         "testEnvironment": "node"
