--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/passport": "^8.1.0",
         "@nestjs/platform-express": "^8.0.0",
-        "@nestjs/swagger": "^5.1.5",
+        "@nestjs/serve-static": "^2.2.2",
+        "@nestjs/swagger": "^5.2.0",
         "@nestjs/typeorm": "^8.0.3",
         "bcryptjs": "^2.4.3",
         "cache-manager": "^3.6.0",
         "cache-manager-redis-store": "^2.0.0",
-        "class-transformer": "^0.5.1",
+        "class-transformer": "^0.5.0",
         "class-validator": "^0.13.2",
         "dotenv": "^16.0.0",
+        "express": "^4.17.2",
+        "ip": "^1.1.5",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.3.3",
@@ -54,7 +57,8 @@
         "swagger-ui-express": "^4.3.0",
         "template-file": "^6.0.1",
         "typeorm": "^0.2.41",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "webpack": "^5.68.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
@@ -64,6 +68,7 @@
         "@types/cache-manager": "^3.4.2",
         "@types/cache-manager-redis-store": "^2.0.1",
         "@types/express": "^4.17.13",
+        "@types/ip": "^1.1.0",
         "@types/jest": "27.0.2",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.0.0",
