Add OperatingSystem entity and integrate it + other improvements
- Added the OperatingSystem entity (operating_systems DB table)
- Moved some code around
- Integrated functionalities using the new entity
- Wrote script for automatically adding DB entries for iso images from a json file located in the root folder of the project
- Adjusted tests accordingly

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "seed": "ts-node -r tsconfig-paths/register ./scripts/seed-iso-images.ts"
     },
     "dependencies": {
         "@nestjs/axios": "^0.0.5",
