--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@nestjs/serve-static": "^2.2.2",
         "@nestjs/swagger": "^5.2.0",
         "@nestjs/typeorm": "^8.0.3",
+        "app-root-path": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "cache-manager": "^3.6.0",
         "cache-manager-redis-store": "^2.0.0",
@@ -65,6 +66,7 @@
         "@nestjs/cli": "^8.0.0",
         "@nestjs/schematics": "^8.0.0",
         "@nestjs/testing": "^8.0.0",
+        "@types/app-root-path": "^1.2.4",
         "@types/bcryptjs": "^2.4.2",
         "@types/cache-manager": "^3.4.2",
         "@types/cache-manager-redis-store": "^2.0.1",
