--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "auth-api",
+    "name": "linux-web-terminal-server",
     "version": "0.0.1",
-    "description": "",
+    "description": "Back-end services for linux-web-server",
     "author": "Emanuel-Alin Raileanu",
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
         "prebuild": "rimraf dist",
         "build": "yarn run lint && nest build",
-        "start:api": "nest start api",
+        "start:ssh-service": "nest start ssh-service",
         "start:auth": "nest start auth",
         "start:vm-manager": "nest start vm-manager",
-        "start:api:dev": "nest start api --watch",
+        "start:ssh-service:dev": "nest start ssh-service --watch",
         "start:auth:dev": "nest start auth --watch",
         "start:vm-manager:dev": "nest start vm-manager --watch",
-        "start:api:debug": "nest start api --debug --watch",
+        "start:ssh-service:debug": "nest start ssh-service --debug --watch",
         "start:auth:debug": "nest start auth --debug --watch",
         "start:vm-manager:debug": "nest start vm-manager --debug --watch",
-        "start:api:prod": "node dist/api/main",
+        "start:ssh-service:prod": "node dist/ssh-service/main",
         "start:auth:prod": "node dist/auth/main",
         "start:vm-manager:prod": "node dist/vm-manager/main",
-        "start:all": "nest start api & nest start auth & nest start vm-manager",
+        "start:all": "nest start ssh-service & nest start auth & nest start vm-manager",
         "lint": "eslint \"*/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
@@ -35,9 +35,11 @@
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/passport": "^8.1.0",
         "@nestjs/platform-express": "^8.0.0",
+        "@nestjs/platform-socket.io": "^8.4.0",
         "@nestjs/serve-static": "^2.2.2",
         "@nestjs/swagger": "^5.2.0",
         "@nestjs/typeorm": "^8.0.3",
+        "@nestjs/websockets": "^8.4.0",
         "app-root-path": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "cache-manager": "^3.6.0",
@@ -50,6 +52,7 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql2": "^2.3.3",
+        "node-ssh": "^12.0.3",
         "passport": "^0.5.2",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
