--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
+        "ssh2": "^1.11.0",
         "swagger-ui-express": "^4.3.0",
         "template-file": "^6.0.1",
         "typeorm": "^0.2.41",
@@ -80,6 +81,7 @@
         "@types/node": "^16.0.0",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
+        "@types/ssh2": "^0.5.52",
         "@types/supertest": "^2.0.11",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
