Fix prod services startup

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
         "start:ssh-service:debug": "nest start ssh-service --debug --watch",
         "start:auth:debug": "nest start auth --debug --watch",
         "start:vm-manager:debug": "nest start vm-manager --debug --watch",
-        "start:ssh-service:prod": "node dist/ssh-service/main",
-        "start:auth:prod": "node dist/auth/main",
-        "start:vm-manager:prod": "node dist/vm-manager/main",
+        "start:ssh-service:prod": "node dist/ssh-service/src/main",
+        "start:auth:prod": "node dist/auth/src/main",
+        "start:vm-manager:prod": "node dist/vm-manager/src/main",
         "start:all": "nest start ssh-service & nest start auth & nest start vm-manager",
         "lint": "eslint \"*/**/*.ts\" --fix",
         "test": "jest",
